force-app/main/default/objects/Travel_Booking__c.object
<CustomObject>
    <fields>
        <fullName>ConfirmationStatus__c</fullName>
        <label>Confirmation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                    <default>true</default>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Travel Bookings</relationshipLabel>
        <relationshipName>Travel_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DepartureDate__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassengerCount__c</fullName>
        <label>Passenger Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PassengerName__c</fullName>
        <label>Passenger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefundAmount__c</fullName>
        <label>Refund Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReturnDate__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TravelClass__c</fullName>
        <label>Travel Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Economy</fullName>
                    <default>true</default>
                    <label>Economy</label>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TravelOption__c</fullName>
        <label>Travel Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Travel Booking</label>
    <listViews>
        <fullName>All_Bookings</fullName>
        <columns>NAME</columns>
        <columns>PassengerName__c</columns>
        <columns>Destination__c</columns>
        <columns>DepartureDate__c</columns>
        <columns>ReturnDate__c</columns>
        <columns>TravelClass__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>ConfirmationStatus__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Bookings</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled_Bookings</fullName>
        <columns>NAME</columns>
        <columns>PassengerName__c</columns>
        <columns>Destination__c</columns>
        <columns>DepartureDate__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>RefundAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ConfirmationStatus__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Bookings</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Confirmed_Bookings</fullName>
        <columns>NAME</columns>
        <columns>PassengerName__c</columns>
        <columns>Destination__c</columns>
        <columns>DepartureDate__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>TravelClass__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ConfirmationStatus__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>Confirmed Bookings</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Bookings</fullName>
        <columns>NAME</columns>
        <columns>PassengerName__c</columns>
        <columns>Destination__c</columns>
        <columns>DepartureDate__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>ConfirmationStatus__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Bookings</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Booking Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>